Favicon and FAQ updates

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oliver & Andrea — Wedding</title>
+    <link rel="icon" type="image/png" href="/pictures/favicon.png" />
+
   </head>
 
   <body>
@@ -243,10 +245,7 @@
         </form>
       </section>
 
-      <!-- FOOTER -->
-      <footer class="footer">
-        <span class="muted" id="updated"></span>
-      </footer>
+     
     </div>
 
     <script type="module" src="/src/main.js"></script>
